# simple-api-flask

./: abrir_arquivo.py  app.py  atividade1.py  ceps.txt  cronograma.yaml  dict_de_list.py  docker-compose.yaml  normalizar_cep.py  pyproject.toml
app/: exemplo_de_func.py  exemplo_de_rota.py  lição_da_semana.md  main.py  questão_01.py
app/db/: model.py
app/templates/: for.html  form.html  if.html  index.html  users.html
auxiliar/: app.py  cep.txt  ceps.txt  normalizar_cep.py
folder_aux/: .gitignore  README.md  abrir_arquivo.py  app.py  app_db.py  ceps.txt  tablet.py  tablets.txt
folder_aux/db/: db_array.py  db_file.py
folder_aux/help/: converter_string_em_lista.py
help/: ler_escrever_adicionar.py
licoes/: criar_arq.py
licoes/pasta_01/: arquivo_01.txt
licoes/pasta_02/: arquivo_02
licoes/pasta_03/: arquivo_03
licoes/pasta_04/: arquivo_04.txt
licoes/pasta_05/: arquivo_05
