[tool.poetry]
name = "simple-api-flask"
version = "0.1.0"
description = "Aula de flask"
authors = ["thaisperlho <56940730+thaisperlho@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
